# ufid_reader

./: .gitignore  .profile  Data.py  Enroll.py  README.md  StudentCourse.db  StudentCourse2.db  UFIDProjectSampleDatabase.csv  barcode-scanner.py  client.py  gui.py  pyvenv.cfg  requirements.txt  validation.py  validationSQL.py
AaronHelpFunc/: HTMLparser.py  api-request.py  courseFetch.py  courseFetch2.py  courseFetch3.py  test.py
GUI/: gui.py  gui_main_loop.py  landing.py  requirements.txt  validation.py
John/: StudentCourse2.db  client.py  server.py  ufid_barcodes.csv  validation.py
KioskCase/: Part Studio 1 - Part 3.stl  Part Studio 1 - Part 4.stl
SQL and Database/: Data.py
SoftwareTest/: API-GET-Unit-Test.py  Public-Course-API-Time-Test.py  Public_Course_API_Time_report.txt
Testdata/time/: scanTimes.txt
UFIDReader/: .profile  .xinitrc  copy_scripts  start
UFIDReader/ConfigFiles/: .profile  .xinitrc  requirements.txt
UFIDReader/GUI/: gui.py  scanTimes.txt  setup.py
UFIDReader/src/: comms.py  init.py  main.py  parsing_main_loop.py  server.py  setup.py  test.py
UFIDWebApp/: .env  app.py
UFIDWebApp/api/: courseFetch.py
UFIDWebApp/data/: exams_2248.db  roster.db
UFIDWebApp/templates/: exams.html  form.html  form2.html  form3.html  index.html  kiosks.html  kiosks_aaron.html  login.html  roster.html  test_courses.html  (+2 more)
Validation/: API-to-Database.py  courses_2248.db  encryption.py  validation.py
hardware/picoW/: CMakeLists.txt  usbTest.c
src/: client.py  comms.py  gui_main_loop.py  init.py  parsing_main_loop.py  server.py  test.py
(+2 files in other folders)
